tests/errors/float-backend.ari
fn main() -> i64 {
  let value = 1.0f64 + 2.0f64;
  return 0;
}
